--- a/HopeNewsletter.html
+++ b/HopeNewsletter.html
@@ -22,10 +22,8 @@
     </style>
 
     <!-- ## Assistive Technology and Browser Tabs ## -->
-    <title>What’s New & Next</title>
+    <title>What’s New</title>
 
-    <!-- ## Modular Template Version: v[YYYYMMDD.1-bi] ## -->
-    <!-- ## Email Build Version [edit]: v[YYYYMMDD.1-bi] ## -->
 
     <!-- ## Fonts ## -->
     <!-- link: loads as code loads (preferred); import: loads after page loads -->
@@ -447,7 +445,7 @@
         <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
             <tr>
                 <!-- horizontal spacing/background color -->
-                <th class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 20px; mso-line-height-rule: exactly; background-color: rgb(236, 236, 236);">
+                <th class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 20px; mso-line-height-rule: exactly; background-color:#F5F2E8">
                     <!-- h1/paragraph/h3 -->
               
                         <p class="m-text--p m-textAlign--center" style="padding: 0px; margin: 0; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 12px; font-weight: normal; font-weight: 400; color: #041727; mso-line-height-alt: 20px; line-height: 1.4; letter-spacing: normal; text-align: left;">
