--- a/index.html
+++ b/index.html
@@ -165,28 +165,28 @@
     	</div>
     </section>
 <!--Row 1 : Portfolio-->
-	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
-    	<div class="container">
-    		<div class="row d-flex">
-    			<div class="col-md-6 col-lg-5 d-flex">
-    				<div class="img-about img d-flex align-items-stretch">
-    					<div class="overlay"></div>
-	    				<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/ChatGPT548x375.jpg);">
-	    				</div>
-    				</div>
-    			</div>
-    			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-    				<div class="row justify-content-start pb-3">
-		          <div class="col-md-12 heading-section ftco-animate">
-					<h1 class="big">Announcement</h1>
-		            <h2 class="mb-4">Announcement Email</h2>
-		            <p>Announcement emails convey vital business developments to subscribers, such as organizational changes, new policies, upcoming products, or campaigns. They are concise, generating customer interest in your brand.
+<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+	<div class="container">
+		<div class="row d-flex">
+			<div class="col-md-6 col-lg-5 d-flex">
+				<div class="img-about img d-flex align-items-stretch">
+					<div class="overlay"></div>
+					<div class="img d-flex align-self-stretch align-items-center" style="background-image:url(img/TeaLogoThumb.jpg)">
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+				<div class="row justify-content-start pb-3">
+			  <div class="col-md-12 heading-section ftco-animate">
+					<h1 class="big">Welcome</h1>
+		            <h2 class="mb-4">Welcome Email</h2>
+		            <p>Welcome emails introduce new subscribers to your brand's tone and offerings within 24 hours of joining your email list. Express gratitude for their interest and provide essential information for engagement.
                     </p>
 		          </div>
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="https://felixzavala.com/ArasakaEmail.html" class="btn btn-primary py-2 px-5">See Email</a></p>
+                <p><a href="healthtea.html" class="btn btn-primary py-2 px-5">See Email</a></p>
               </div>
 	          </div>
 	        </div>
@@ -198,7 +198,7 @@
 	<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     	<div class="container">
     		<div class="row d-flex">
-				<div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
+				<div class="col-md-6 col-lg-7 pl-lg-5 pb-6">
     				<div class="row justify-content-start pb-3">
 		          <div class="col-md-12 heading-section ftco-animate">
 					<h1 class="big">Newsletter</h1>
@@ -208,7 +208,7 @@
 		        </div>
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <p><a href="HopeNewsletter.html" class="btn btn-primary py-2 px-5">See Email</a></p>
+                <p><a href="https://felixzavala.com/HopeNewsletter.html" class="btn btn-primary py-2 px-5">See Email</a></p>
               </div>
 	          </div>
 	        </div>
@@ -224,8 +224,10 @@
         </div>
     	</div>
     </section>
-<!--Row 3 : Portfolio-->
+<!-- End: Portfolio-->
 
+
+<!-- Row 3 : Portfolio -->
 <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
 	<div class="container">
 		<div class="row d-flex">
@@ -255,6 +257,73 @@
 	</div>
 </section>
 
+<!-- Row 4 : Portfolio -->
+<!--Row 2 : Portfolio-->
+
+<section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+    <div class="container">
+        <div class="row d-flex">
+            <div class="col-md-6 col-lg-7 pl-lg-5 pb-6">
+                <div class="row justify-content-start pb-3">
+              <div class="col-md-12 heading-section ftco-animate">
+                <h1 class="big">Announcement</h1>
+                <h2 class="mb-4">Announcement Email</h2>
+                <p>Announcement emails convey vital business developments to subscribers, such as organizational changes, new policies, upcoming products, or campaigns. They are concise, generating customer interest in your brand.
+
+
+                </p>
+              </div>
+            </div>
+          <div class="counter-wrap ftco-animate d-flex mt-md-3">
+          <div class="text">
+            <p><a href="https://felixzavala.com/ArasakaEmail.html" class="btn btn-primary py-2 px-5">See Email</a></p>
+          </div>
+          </div>
+        </div>
+
+            <div class="col-md-6 col-lg-5 d-flex">
+                <div class="img-about img d-flex align-items-stretch">
+                    <div class="overlay"></div>
+                    <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(https://felixzavala.com/img/ChatGPT548x375.jpg);">
+                    </div>
+                </div>
+            </div>
+
+    </div>
+    </div>
+</section>
+<!-- End: Portfolio-->
+
+<!-- Media -->
+
+<section class="ftco-section" id="blog-section">
+    <div class="container">
+      <div class="row justify-content-center mb-5 pb-5">
+        <div class="col-md-7 heading-section text-center ftco-animate">
+          <h1 class="big big-2">Media</h1>
+          <h2 class="mb-4 pt-6">Media</h2>
+          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+        </div>
+      </div>
+      
+      <div class="row d-flex">
+        <div class="col-md-4 d-flex ftco-animate">
+            <div class="blog-entry center">
+                <iframe width="560" height="315" class="block-22" src="https://www.youtube-nocookie.com/embed/RkkbavMC8y8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div class="text mt-3 float-right d-block">
+         
+              <h3 class="heading"><a href="single.html">Interview with an Email Developer</a></h3>
+              <p>In this interview, I share valuable insight on how to get started in email development and how to begin crafting professional looking HTML emails.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+
+<!-- Contact -->
 
     <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
       <div class="container">
