--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 
 <section class="ftco-section" id="blog-section">
     <div class="container">
-      <div class="row justify-content-center mb-5 pb-5">
+      <div class="row justify-content-center mb-5 pb-5 pt-5 mt-5">
         <div class="col-md-7 heading-section text-center ftco-animate">
           <h1 class="big big-2">Media</h1>
           <h2 class="mb-4 pt-6">Media</h2>
@@ -351,6 +351,7 @@
 		<p>2019 - <script>document.write(new Date().getFullYear());</script> FelixZavala.com 
 </p>
 		  <ul class="ftco-footer-social list-unstyled mt-1">
+            <li class="ftco-animate"><a href="https://www.youtube.com/@graphicfelix1886"><span class="icon-youtube"></span></a></li>
 			<li class="ftco-animate"><a href="https://twitter.com/GraphicFelix"><span class="icon-twitter"></span></a></li>
 			<li class="ftco-animate"><a href="https://www.linkedin.com/in/felix-zavala-8a8266231/"><span class="icon-linkedin"></span></a></li>
 		  </ul>
