--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"><img src="https://felixzavala.com/assets/img/fboxlogowhite.png" width="40%"></a>
+	      <a class="navbar-brand" href="index.html">Fx</a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -58,9 +58,9 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hola!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Felix Zavala</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Felix</span></h1>
 			            <h2 class="mb-4">A Web and Email Developer</h2>
-			            <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
+			            <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -78,7 +78,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm based in <span>Dallas, Texas</span> </h1>
-			            <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
+			            <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
 		            </div>
 		          </div>
 	        	</div>
