--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <a href="healthtea.html" class="block-20" style="background-image: url('img/TeaLogoThumb.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                      <h3 class="onset-black"><a href="healthtea.html"><span style="color: #222;">Welcome Email &nbsp; 	&#129170;</span></a></h3>
+                      <h3 class="onset-black"><a href="healthtea.html"><span style="color: #222;">Welcome Email</span> &nbsp; 	&#129170;</a></h3>
                       <p>Welcome emails introduce new subscribers to your brand and are usually sent within 24 hours of subscription.
 
                       </p>
@@ -188,7 +188,7 @@
                     <a href="https://felixzavala.com/HopeNewsletter.html" class="block-20" style="background-image: url('img/Hope-Hero.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                      <h3 class="onset-black"><a href="https://felixzavala.com/HopeNewsletter.html"><span style="color: #222;">Email Newsletter</a>&nbsp; 	&#129170;</span></h3>
+                      <h3 class="onset-black"><a href="https://felixzavala.com/HopeNewsletter.html"><span style="color: #222;">Email Newsletter</span>&nbsp; 	&#129170;</a></h3>
                       <p>Newsletter emails strengthen your bond with subscribers by sharing updates about your company and/or products.</p>
                     </div>
                   </div>
@@ -203,8 +203,8 @@
                     </a>
                     <div class="text mt-3 float-right d-block">
                       <h3 class="onset-black"><a href="https://felixzavala.com/emailtemp2.html"><span style="color: #222;">Promotional Email</span>
-                    </a></h3>
-                      <p>Promotional emails, inform subscribers about discounts, limited-time promotions, and deals from your company. Their main goal is to swiftly convert email leads into purchases.
+                        &nbsp; 	&#129170;</a></h3>
+                      <p>Promotional emails, inform subscribers about discounts, limited-time promotions, and deals from your company.
 
 
 
@@ -217,9 +217,9 @@
                     <a href="https://felixzavala.com/ArasakaEmail.html" class="block-20" style="background-image: url('https://felixzavala.com/img/ChatGPT548x375.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                      <h3 class="onset-black"><a href="https://felixzavala.com/ArasakaEmail.html"><span style="color: #222;">Announcement Email</span>
+                      <h3 class="onset-black"><a href="https://felixzavala.com/ArasakaEmail.html"><span style="color: #222;">Announcement Email</span>&nbsp; 	&#129170;
                     </a></h3>
-                      <p>Announcement emails convey vital business developments, such as organizational changes, new policies, or upcoming products. They are concise, generating customer interest in your brand.
+                      <p>Announcement emails convey vital business developments, such as organizational changes, new policies, or upcoming products. 
 
                       </p>
                     </div>
