--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	  
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html"> fz </a>
+	      <a class="navbar-brand" href="index.html">< fz ></a>
 	      <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -58,7 +58,7 @@
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hola!</span>
-			            <h1 class="mb-4 mt-3">I'm <span>Felix</span></h1>
+			            <h1 class="mb-4 mt-3">I'm <span>Felix Zavala</span></h1>
 			            <h2 class="mb-4">A Web and Email Developer</h2>
 			            <p><a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">My Portfolio</a></p>
 		            </div>
@@ -87,7 +87,7 @@
 	    </div>
     </section>
     <hr class="new1">
-	<section class="ftco-about img ftco-section py-5 mt-60" id="about-section">
+	<section class="ftco-about img ftco-section pt-5 mt-60" id="about-section">
 		<div class="container">
 			<div class="row d-flex">
 			
@@ -169,6 +169,37 @@
     </section>
     <section id="blog-section">
         <div class="container">
+
+            <div class="row d-flex">
+                <div class="col-md-6 d-flex ftco-animate">
+                    <div class="blog-entry justify-content-end">
+                    <a href="https://felixzavala.com/judostudio/index.html" class="block-20" style="background-image: url('img/JudoThumb.png');">
+                    </a>
+                    <div class="text mt-3 float-right d-block">
+                      <h3 class="onset-black"><a href="https://felixzavala.com/judostudio/index.html"><span style="color: #222;">Landing Page</span>
+                        &nbsp; 	&#129170;</a></h3>
+                      <p>A landing page is a web page designed for a specific goal, like getting people to sign up, buy a product, or download something.
+
+
+
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 d-flex ftco-animate">
+                    <div class="blog-entry justify-content-end">
+                    <a href="https://felixzavala.com/Login/index.html" class="block-20" style="background-image: url('img/LoginScreen.png');">
+                    </a>
+                    <div class="text mt-3 float-right d-block">
+                      <h3 class="onset-black"><a href="https://felixzavala.com/Login/index.html"><span style="color: #222;">Login Screen</span>&nbsp; 	&#129170;
+                    </a></h3>
+                      <p>A login screen is where you enter your username and password to access an account or system securely.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+             
+              </div>  
     
             <div class="row d-flex">
                 <div class="col-md-6 d-flex ftco-animate">
@@ -199,10 +230,10 @@
               <div class="row d-flex pt-5 mb-5 pb-5">
                 <div class="col-md-6 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
-                    <a href="https://felixzavala.com/emailtemp2.html" class="block-20" style="background-image: url('https://felixzavala.com/img/PC_Accessories-.jpg');">
+                    <a href="https://felixzavala.com/judostudio/index.html" class="block-20" style="background-image: url('https://felixzavala.com/img/PC_Accessories-.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                      <h3 class="onset-black"><a href="https://felixzavala.com/emailtemp2.html"><span style="color: #222;">Promotional Email</span>
+                      <h3 class="onset-black"><a href="https://felixzavala.com/judostudio/index.html"><span style="color: #222;">Promotional Email</span>
                         &nbsp; 	&#129170;</a></h3>
                       <p>Promotional emails, inform subscribers about discounts, limited-time promotions, and deals from your company.
 
