--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Portfolio</h1>
             <h2>Portfolio</h2>
-            <p>My HTML email designs feature a fluid layout using media queries and hybrid coding for optimal responsiveness. Additionally, I employed bulletproof button designs with VML and modern CSS for consistent interactivity across various email clients. These technical strategies ensure a seamless and engaging user experience for all recipients, regardless of their device or email preferences.</p>
+            <p>My designs feature a fluid layout using media queries and hybrid coding for optimal responsiveness. These technical strategies ensure a seamless and engaging user experience for all recipients, regardless of their device or browser.</p>
         
           </div>
         </div>
