--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col-md-6 d-flex ftco-animate">
                     <div class="blog-entry justify-content-end">
-                    <a href="https://felixzavala.com/Login/index.html" class="block-20" style="background-image: url('img/LoginScreen.png');" target="_blank">
+                    <a href="https://felixzavala.com/Login/index.html" target="_blank" class="block-20" style="background-image: url('img/LoginScreen.png');">
                     </a>
                     <div class="text mt-3 float-right d-block">
                       <h3 class="onset-black"><a href="https://felixzavala.com/Login/index.html" target="_blank"><span style="color: #222;">Login Screen</span>&nbsp; 	&#129170;
