--- a/HopeNewsletter.html
+++ b/HopeNewsletter.html
@@ -404,7 +404,7 @@
                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                         <tr>
                             <!-- image -->
-                            <th class="" width="100%" align="left" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="RS.png" border="0" style="display: block; margin: 0px; max-width: 200px !important;" width="200" height="" alt="AltTextHere"></a>
+                            <th class="" width="100%" align="left" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a class="" href="" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="img/RS.png" border="0" style="display: block; margin: 0px; max-width: 200px !important;" width="200" height="" alt="AltTextHere"></a>
                             </th>
                         </tr>
                     </table>
