--- a/index.html
+++ b/index.html
@@ -266,11 +266,13 @@
 <!-- Second Column -->
         <div class="col-md-6 d-flex ftco-animate px-4">
             <div class="blog-entry center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/XX9-0fgJm3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nilR4WIkTxw?si=OBUlLaTxZztDtWng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="text mt-3 float-right d-block">
          
-              <h3 class="heading"><a href="https://www.youtube.com/embed/XX9-0fgJm3M">How I made A free Portfolio Website</a></h3>
-              <p>In this video I share how I was able to create a free online portfolio and share some best practices.</p>
+         
+                <h3 class="heading"><a href="https://www.youtube.com/watch?v=nilR4WIkTxw">How to style your alt text in an HTML email
+                </a></h3>
+                  <p> In this quick tutorial, we'll show you simple techniques to enhance the visual appeal of your HTML emails by styling alt text!</p>
             </div>
           </div>
         </div>
