--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 	    </div>
     </section>
     <hr class="new1">
-	<section class="ftco-about img ftco-section pt-5 mt-60" id="about-section">
+	<section class="ftco-about img pt-5 mt-60" id="about-section">
 		<div class="container">
 			<div class="row d-flex">
 			
@@ -125,21 +125,17 @@
 					</div>
 				</div>
 			</div>
-						 <div class="col-md-6 col-lg-7 pl-lg-5 pb-5">
-					<div class="row justify-content-start pb-3">
+						 <div class="col-md-6 col-lg-7 pl-lg-5 pb-0 mb-0">
+					<div class="row justify-content-start pb-0">
 				  <div class="col-md-12 heading-section ftco-animate">
 					  <h1 class="big">About</h1>
-					<h2 class="mb-4">About Me</h2>
+					<h2>About Me</h2>
 					<p>I'm an experienced email and web developer with a background in graphic design. I have a strong proficiency in HTML, CSS, JavaScript, Photoshop, and various CMS platforms.</p>
 
-                        <p>In my current role, I'm developing HTML emails, landing pages, and making updates to Optimizely and WordPress websites.
-
-							Over the years, I have built emails and worked on websites for brands such as Yamaha, Cuisinart, Pitney Bowes, and TechSmith.
+                        <p>Over the years, I have built emails and worked on websites for brands such as Yamaha, Cuisinart, Pitney Bowes, and TechSmith.
 
 					</p>
                     
-
-                    <p><a href="mailto:jfelixzavala10@gmail.com" class="btn btn-primary py-3 px-4" target="_blank">Hire me</a> <a href="#portfolio-section" class="btn btn-white btn-outline-white py-3 px-4">Download Resume</a></p>
 	
 				  </div>
 				</div>
