--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 				  <div class="col-md-12 heading-section ftco-animate">
 					  <h1 class="big">About</h1>
 					<h2>About Me</h2>
-					<p>I'm an experienced email and web developer with a background in graphic design. I have a strong proficiency in HTML, CSS, JavaScript, Photoshop, and various CMS platforms.</p>
+					<p>I'm an experienced email and web developer with a background in graphic design. I have a strong proficiency in HTML, CSS, JavaScript, Photoshop, and various CMS platforms, including WordPress.</p>
 
-                        <p>Over the years, I have built emails and worked on websites for brands such as Yamaha, Cuisinart, Pitney Bowes, and TechSmith.
+                        <p>Over the years, I have built emails and worked on websites for brands such as Yamaha, Cuisinart, and Pitney Bowes.
 
 					</p>
                     
@@ -239,7 +239,7 @@
 
 <section class="ftco-section" id="blog-section">
     <div class="container">
-      <div class="row justify-content-center mb-5 pb-5 pt-3">
+      <div class="row justify-content-center mb-5 pb-5 pt-2">
         <div class="col-md-7 heading-section text-center ftco-animate">
           <h1 class="big big-2">Media</h1>
           <h2 class="mb-4 pt-6">Media</h2>
@@ -251,11 +251,11 @@
 <!-- First Column -->
         <div class="col-md-6 d-flex ftco-animate ">
             <div class="blog-entry center">
-                <iframe width="560" height="315" src="https://www.youtube.com/watch?v=LKPf4l7O6bE&t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/LKPf4l7O6bE?si=15sbEv07MDv0eTZD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="text mt-3 float-right d-block">
          
-              <h3 class="heading"><a href="https://www.youtube.com/watch?v=LKPf4l7O6bE&t">Interview with an Email Developer</a></h3>
-              <p>I share valuable insight on how to get started in email development and how to begin crafting professional looking HTML emails.</p>
+              <h3 class="heading"><a href="https://www.youtube.com/embed/LKPf4l7O6bE?si=15sbEv07MDv0eTZD">Is HTML Email Dead?</a></h3>
+              <p>Join me as I explore the current state of HTML email in this thought-provoking video!</p>
             </div>
           </div>
         </div>
