--- a/index.html
+++ b/index.html
@@ -262,13 +262,14 @@
 <!-- Second Column -->
         <div class="col-md-6 d-flex ftco-animate px-4">
             <div class="blog-entry center">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FyObSrXIXDE?si=7b3LzP3t17Fa_dJv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/YLL2YQ0hdFI?si=jQANzDllKzcTRlMr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <div class="text mt-3 float-right d-block">
          
          
-                <h3 class="heading"><a href="https://www.youtube.com/embed/FyObSrXIXDE?si=7b3LzP3t17Fa_dJv">How I Code HTML Emails
+                <h3 class="heading"><a href="https://www.youtube.com/embed/YLL2YQ0hdFI?si=jQANzDllKzcTRlMr">5 Websites you should know as an Email Developer in 2024
                 </a></h3>
-                  <p>Gain a behind-the-scenes look at my coding workflow and favorite tools.</p>
+                  <p>Are you an email developer looking to stay at the top of your game in 2023? Look no further! In this video, we've curated a list of five essential websites that every email developer should know about. 
+                </p>
             </div>
           </div>
         </div>
