--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <!-- Header -->
 <header class="fx-container fx-center" style="padding:128px 16px 60px 16px">
-  <h1 class="fx-margin fx-jumbo">Front-end & Email Developer</h1>
-  <p class="fx-xlarge">Developing the web one line of code at a time.</p>
+  <h1 class="fx-margin fx-jumbo ">Front-end & Email Developer</h1>
+  <p class="fx-xlarge fx-content">Blending front-end expertise with a touch of design flair, I navigate the exciting crossroads of creativity and technology.</p>
 </header>
 
 <!-- Avatar -->
@@ -38,7 +38,7 @@
   <div class="fx-content">
     <div>
       <h1><strong>Hola! I'm Felix.</strong></h1>
-      <h3 class="fx-padding-16">Blending front-end expertise with a touch of design flair, I navigate the exciting crossroads of creativity and technology. Over the years, I've had the privilege to collaborate with a dynamic digital experience agency, crafting responsive HTML designs, shaping engaging landing pages, and enhancing websites across various CMS platforms, including WordPress.</h3>
+      <h3 class="fx-padding-16">Over the years, I've had the privilege to collaborate with a dynamic digital experience agency, crafting responsive HTML designs, shaping engaging landing pages, and enhancing websites across various CMS platforms, including WordPress.</h3>
     </div>
   </div>
 </div>
