--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- 3up -->
 <div class="fx-row-padding fx-container fx-center fx-padding-lr-200" style="background: linear-gradient(#0cc0df 50%, #ffFFFF 50%);">
     <div class="fx-third fx-margin-top-30">
-      <div class="fx-card fx-container fx-border-top-radius fx-white fx-hover-teal " style="min-height:460px; padding-bottom: 40px;">
+      <div class="fx-card fx-container fx-border-top-radius fx-white fx-hover-aqua fx-hover-text-white" style="min-height:460px; padding-bottom: 40px;">
       
       <i class="fa fa-desktop fx-margin-bottom fx-text-theme " style="font-size:120px; padding-top: 40px;"></i>
       <h3>Front-end Developer</h3>
