--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -402,7 +402,7 @@
 			<table align="center" border="0" cellpadding="0" cellspacing="0" class="mobile" style="width:600px; max-width:600px;" width="600">
 				
 					<tr>
-						<td align="center" border="0" style="width:100%; " width="100%">
+						<td align="center" border="0" style="width:100%; background-color:#000000;" width="100%">
 						<table align="center" border="0" cellpadding="0" cellspacing="0" style="border:none; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; width:100%;" width="100%"><!-- ## START: MODULE - HEADER NAV ## -->
 							
 								<tr>
