--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -638,7 +638,7 @@
 												<table align="center" border="0" cellpadding="0" cellspacing="0" style="border:none; mso-table-lspace:0pt; mso-table-rspace:0pt; border-collapse:collapse; width:100%;" width="100%">
 													
 														<tr><!-- logo -->
-															<td align="left" border="0" class="footerLogo" style="font-family:'Source Sans Pro', sans-serif; width:120px; text-align:left; font-weight:400; font-size:10px; color:#FFFFFF; line-height:1.5; vertical-align:middle;" width="120"><a href="" name="FooterLogoArasaka_image" target="_blank" ><img alt="Arasaka" border="0"  height="41.186" name=""  src="/img/Arasaka-Text-Logo.png" style="display:block;" title="Arasaka" width="120"  /></a></td>
+															<td align="left" border="0" class="footerLogo" style="font-family:'Source Sans Pro', sans-serif; width:120px; text-align:left; font-weight:400; font-size:10px; color:#FFFFFF; line-height:1.5; vertical-align:middle;" width="120"><a href="" name="FooterLogoArasaka_image" target="_blank" ><img alt="Arasaka" border="0"  height="41.186" name=""  src="/img/NeoTech-White-Logo.png" style="display:block;" title="Arasaka" width="120"  /></a></td>
 															<!-- 195px spacer -->
 															<td align="left" border="0" class="m--hide" style="font-family:'Source Sans Pro', sans-serif; width:195px; text-align:left; font-weight:400; font-size:13px; color:#393939; line-height:1.5; vertical-align:middle; padding:13px 0;" width="195">&nbsp;</td>
 															<!-- social icons -->
@@ -673,7 +673,7 @@
 											</tr>
 											<!--contact info -->
 											<tr>
-												<td align="left" border="0" class="footerContactInfo" style="font-family:'Source Sans Pro', sans-serif; width:100%; text-align:left; font-weight:400; font-size:10px; color:#FFFFFF; line-height:1.5; vertical-align:middle;" width="100%">Arasaka Corporation<br />
+												<td align="left" border="0" class="footerContactInfo" style="font-family:'Source Sans Pro', sans-serif; width:100%; text-align:left; font-weight:400; font-size:10px; color:#FFFFFF; line-height:1.5; vertical-align:middle;" width="100%">NeoTech Corporation<br />
 												6241 Corpo Blvd, Night City, MetroState 60214<br>© 2077 Reserve the Rights</td>
 											</tr>
 										
