--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -2,7 +2,7 @@
 <html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml">
 <head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><!--[if !mso]><!--><link rel="stylesheet" href="https://use.typekit.net/mux8flx.css"><link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!--<![endif]-->
-	<title>Arasaka</title>
+	<title>NeoTech</title>
 	<!-- ## Fonts ## --><!-- link: loads as code loads (preferred); import: loads after page loads --><!--[if !mso]><!-->
 	<style data-embed="" type="text/css">/* Figtree: 900 (black) */
             @import url("https://fonts.googleapis.com/css2?family=Figtree:wght@900&display=swap");
