--- a/emailtemplate3.html
+++ b/emailtemplate3.html
@@ -490,46 +490,46 @@
                                   <!-- ## START: MODULE - Text (h1/paragraph) ## -->
                                   <tr>
                                     <!-- vertical spacing from prior module -->
-                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 20px; mso-line-height-rule: exactly; background-color:#000000;">
+                                    <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 20px; mso-line-height-rule: exactly; background-color:#000000;">
                                         <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                             <tr>
                                                 <!-- horizontal spacing/background color -->
-                                                <th class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 0px 40px; mso-line-height-rule: exactly; background-color:#000000;">
+                                                <td class="m-pad-lr--20" width="100%" align="center" border="0" style="width: 100%; padding: 0px 40px; mso-line-height-rule: exactly; background-color:#000000;">
                                                     <!-- h1/paragraph/h3 -->
                                                     <h1 class="m-text--h1" style="padding: 0px; margin: 0px; font-family: 'FigTree', Arial, sans-serif; font-size: 36px; font-weight: 700; color: #ffffff; mso-line-height-alt: 32px; line-height: 1.0; letter-spacing: normal; text-align: center;">NEXT-GEN CYBER SOLUTIONS</h1>
                                                     <p class="m-text--p" style="padding: 0px 20px; padding-top: 12px; margin: 0px; margin-top: 10px; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 400; color: #f1f1f1; mso-line-height-alt: 23px; line-height: 1.6; letter-spacing: normal; text-align: center;">Digital threats evolve at an unprecedented pace, staying one step ahead is a necessity. We're excited to introduce our Next-Gen Cyber Solutions.</p>
                                              
-                                                </th>
+                                                </td>
                                             </tr>
                                         </table>
-                                    </th>
+                                    </td>
                                   </tr>
                                   <!-- ## END: MODULE - Text (h1/paragraph) ## -->
                                   <!-- ## START: MODULE - Button (solid/ghost) ## -->
                                   <tr>
                                     <!-- vertical spacing from prior module -->
-                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-bottom: 40px; padding-top: 28px; mso-line-height-rule: exactly; background-color:#000000;">
+                                    <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-bottom: 40px; padding-top: 28px; mso-line-height-rule: exactly; background-color:#000000;">
                                         <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                             <tr>
                                                 <!-- horizontal spacing/background color/border -->
-                                                <th class="" width="100%" align="center" border="0" style="background-color:#000000; width: 100%; padding: 0px; mso-line-height-rule: exactly;">
+                                                <td class="" width="100%" align="center" border="0" style="background-color:#000000; width: 100%; padding: 0px; mso-line-height-rule: exactly;">
                                                     <table class="m-float--center" width="100%" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; margin: 0px auto;">
                                                         <tr>
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
+                                                            <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
                                                                 <!-- horizontal alignment -->
                                                                 <table class="m-float--center" width="" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin: 0px auto;">
                                                                     <tr>
-                                                                        <th class="m-text--button" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 12px; padding-right: 28px; padding-bottom: 12px; padding-left: 28px; mso-line-height-rule: exactly; background: #000000; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 600; color: #FFFFFF; mso-line-height-alt: 14px; line-height: 1.0; letter-spacing: normal; text-align: center; border: 2px solid #FFFFFF; border-radius: 3px;"><a class="" href="#" target="_blank" style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #ffffff; text-decoration: none;" name="ButtonName_button" alias="ButtonName_button">Learn More</a>
-                                                                        </th>
+                                                                        <td class="m-text--button" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 12px; padding-right: 28px; padding-bottom: 12px; padding-left: 28px; mso-line-height-rule: exactly; background: #000000; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 600; color: #FFFFFF; mso-line-height-alt: 14px; line-height: 1.0; letter-spacing: normal; text-align: center; border: 2px solid #FFFFFF; border-radius: 3px;"><a class="" href="#" target="_blank" style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #ffffff; text-decoration: none;" name="ButtonName_button" alias="ButtonName_button">Learn More</a>
+                                                                        </td>
                                                                     </tr>
                                                                 </table>
-                                                            </th>
+                                                            </td>
                                                         </tr>
                                                     </table>
-                                                </th>
+                                                </td>
                                             </tr>
                                         </table>
-                                    </th>
+                                    </td>
                                   </tr>
                                   <!-- ## END: MODULE - Button (solid/ghost) ## -->
 
@@ -574,28 +574,28 @@
 																	   <!-- ## START: MODULE - Button (solid/ghost) ## -->
                                   <tr>
                                     <!-- vertical spacing from prior module -->
-                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-bottom: 40px; padding-top: 28px; mso-line-height-rule: exactly;">
+                                    <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-bottom: 40px; padding-top: 28px; mso-line-height-rule: exactly;">
                                         <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                             <tr>
                                                 <!-- horizontal spacing/background color/border -->
-                                                <th class="" width="100%" align="center" border="0" style=" width: 100%; padding: 0px; mso-line-height-rule: exactly;">
+                                                <td class="" width="100%" align="center" border="0" style=" width: 100%; padding: 0px; mso-line-height-rule: exactly;">
                                                     <table class="m-float--center" width="100%" align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width: 100%; margin: 0px auto;">
                                                         <tr>
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
+                                                            <td class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;">
                                                                 <!-- horizontal alignment -->
                                                                 <table class="m-float--center" width="" align="left" border="0" cellpadding="0" cellspacing="0" role="presentation" style="margin: 0px auto;">
                                                                     <tr>
-                                                                        <th class="m-text--button" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 12px; padding-right: 28px; padding-bottom: 12px; padding-left: 28px; mso-line-height-rule: exactly; background: #ffffff; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 600; color: #FFFFFF; mso-line-height-alt: 14px; line-height: 1.0; letter-spacing: normal; text-align: center; border: 3px solid #000000; border-radius: 3px;"><a class="" href="#" target="_blank" style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #000000; text-decoration: none;" name="ButtonName_button" alias="ButtonName_button">See How</a>
-                                                                        </th>
+                                                                        <td class="m-text--button" width="100%" align="center" border="0" style="width: 100%; padding: 0px; padding-top: 12px; padding-right: 28px; padding-bottom: 12px; padding-left: 28px; mso-line-height-rule: exactly; background: #ffffff; font-family: 'Roboto', Arial, sans-serif; font-size: 16px; font-weight: 600; color: #FFFFFF; mso-line-height-alt: 14px; line-height: 1.0; letter-spacing: normal; text-align: center; border: 3px solid #000000; border-radius: 3px;"><a class="" href="#" target="_blank" style="font-family: 'Source Sans Pro', Arial, sans-serif; color: #000000; text-decoration: none;" name="ButtonName_button" alias="ButtonName_button">See How</a>
+                                                                        </td>
                                                                     </tr>
                                                                 </table>
-                                                            </th>
+                                                            </td>
                                                         </tr>
                                                     </table>
-                                                </th>
+                                                </td>
                                             </tr>
                                         </table>
-                                    </th>
+                                    </td>
                                   </tr>
                                   <!-- ## END: MODULE - Button (solid/ghost) ## -->
 																						
