--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="fx-content">
     <div>
       <h1><strong>Hola! I'm Felix.</strong></h1>
-      <h3 class="fx-padding-16">Experienced HTML Email & Web developer with a graphic design background, proficient in HTML, CSS, Photoshop, and various CMS platforms, including WordPress.
+      <h3 class="fx-padding-16">An experienced Email & Web developer with a graphic design background, proficient in HTML, CSS, and various CMS platforms, including WordPress.
 
       </h3>
     </div>
