--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <!-- Header -->
 <header class="fx-container fx-center" style="padding:128px 16px 60px 16px">
-  <h1 class="fx-margin fx-jumbo ">Front-end & Email Developer</h1>
+  <h1 class="fx-margin fx-jumbo ">Hola! I'm Felix.</h1>
   <p class="fx-xlarge fx-content">Blending front-end expertise with a touch of design flair.</p>
 </header>
 
@@ -38,8 +38,8 @@
 <div class="fx-row-padding fx-mainblue fx-padding-32 fx-container fx-center">
   <div class="fx-content">
     <div>
-      <h1><strong>Hola! I'm Felix.</strong></h1>
-      <h3 class="fx-padding-16">An experienced Email & Web developer with a graphic design background, proficient in HTML, CSS, and various CMS platforms, including WordPress.
+      
+      <h3 class="fx-padding-16">I'm an experienced Email & Web developer with a graphic design background, proficient in HTML, CSS, and various CMS platforms, including WordPress.
 
       </h3>
     </div>
