--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
     <div class="fx-quarter fx-margin-top-30">
         <div class="">
-            <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemp2.html" target="_blank"> <img src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/ArasakaVintageEmailPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
+            <a style="text-decoration: none !important" href="https://felixzavala.com/ArasakaEmail.html" target="_blank"> <img src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/ArasakaVintageEmailPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
           <div class="fx-container">
          </a>
           </div>
