--- a/ArasakaEmail.html
+++ b/ArasakaEmail.html
@@ -240,7 +240,7 @@
                                                     <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                         <tr>
                                                             <!-- image -->
-                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="/img/vintage_computer_ad_of_a_man_using_a_computer_0.jpg" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="Futuristic looking laptop with neon colors and lights"></a>
+                                                            <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/vintage_computer_ad_of_a_man_using_a_computer_0.jpg" border="0" style="display:block; margin:0px auto; max-width:600px !important;" width="600" height="" alt="Futuristic looking laptop with neon colors and lights"></a>
                                                             </th>
                                                         </tr>
                                                     </table>
@@ -365,7 +365,7 @@
                                                                             <table class="m-width--100p m-float--center" width="100%" align="center" role="presentation" border="0" cellpadding="0" cellspacing="0" style="width: 100%; margin: 0px auto;">
                                                                                 <!-- image -->
                                                                                 <tr>
-                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="/img/retrocompu.jpg" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="250" height="" alt="AltTextHere"></a>
+                                                                                    <th class="" width="100%" align="center" border="0" style="width: 100%; padding: 0px; mso-line-height-rule: exactly;"><a href="#" target="_blank" style="" name="ImageName_image" alias="ImageName_image"><img class="m-width--100p" src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/retrocompu.jpg" border="0" style="display:block; margin:0px auto; max-width:400px !important;" width="250" height="" alt="AltTextHere"></a>
                                                                                     </th>
                                                                                 </tr>
                                                                             </table>
