--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 <!-- START: Second Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-64"> 
+  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-64 fx-margin-top"> 
 
  
     
