--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Felix Zavala | Web & Email Developer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://felixzavala.com/css/fxstyle.css">
+  <link rel="stylesheet" href="/css/fxstyle.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -38,7 +38,7 @@
   <div class="fx-content">
     <div>
         <h1 class="fx-jumbo ">Hola! I'm Felix.</h1>
-      <h3 class="fx-padding-16">I'm an experienced Email & Web developer with a graphic design background, proficient in HTML, CSS, and various CMS platforms, including WordPress.
+      <h3 class="fx-padding-16">I am a technical expert specializing in the development and maintenance of HTML emails, websites, and various online services. Proficient in Adobe Creative Cloud applications, including Photoshop, I bring a graphic design background to my work. Additionally, I am skilled in HTML, CSS, and various CMS platforms, including WordPress.
 
       </h3>
     </div>
@@ -59,7 +59,7 @@
   </div>
 
   <!-- START: First Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200 fx-margin-top-20 "> 
+  <div class="fx-row-padding fx-padding-lr-200 fx-margin-top-20 fx-padding-bottom-64"> 
 
     <div class="fx-quarter fx-margin-top-30">
     <div class="">
@@ -99,33 +99,6 @@
     </div>
     </div>
 <!-- END: First Row of My Work -->
-
-
-<!-- START: Second Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-64 fx-margin-top"> 
-
- 
-    
-    <div class="fx-half fx-margin-top-30">
-    <div class="">
-        <a style="text-decoration: none !important" href="https://felixzavala.com/HopeNewsletter.html" target="_blank"><img src="https://felixzavala.com/img/Hope-Hero.jpg" alt="Group of children signing to the camera." style="width:100%" class="fx-hover-opacity">
-      <div class="fx-container">
-      <h4>Email Newsletter  🢒</h4></a>
-      </div>
-    </div>
-    </div>
-    
-    <div class="fx-half fx-margin-top-30">
-    <div class="">
-        <a style="text-decoration: none !important" href="https://felixzavala.com/judostudio/index.html" target="_blank"> <img src="https://felixzavala.com/img/JudoThumb600x400.jpg" alt="Judoka on his knees in a respective bow" style="width:100%" class="fx-hover-opacity">
-      <div class="fx-container">
-      <h4>
-        Landing Page   🢒</h4></a>
-      </div>
-    </div>
-    </div>
-    </div>
-<!-- END: Second Row of My Work --> 
 
 
 
