--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <title>Felix Zavala | Web & Email Developer</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://felixzavala.com/css/fxstyle.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="/css/fxstyle.css">
+  <!-- Google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/jpg" href="https://felixzavala.com/assets/img/fboxlogowhite.png"/>
   <style>
@@ -18,15 +19,15 @@
 <body>
 
 <!-- Header -->
-<header class="fx-container fx-center  fx-light-grey" style="padding:128px 16px 60px 16px">
+<header class="fx-container fx-center " style="padding:128px 16px 0px 16px">
 
 </header>
 
 <!-- Avatar -->
-<div class="fx-row-padding fx-container fx-center  fx-light-grey" style="padding-bottom: 60px;">
+<div class="fx-row-padding fx-container fx-center fx-padding-bottom-48" style="padding-bottom: 0px;">
   <div class="fx-content">
     <div>
-      <img src="/img/fx_headshot_avatar.png" alt="Avatar of Felix" width="206" height="auto">
+      <img class="" src="/img/fx_headshot_avatar.png" alt="Avatar of Felix" width="240" height="auto">
     </div>
 
  
@@ -34,11 +35,11 @@
 </div>
 
 <!-- Intro Paragraph-->
-<div class="fx-row-padding fx-padding-16 fx-container fx-center  fx-light-grey">
+<div class="fx-row-padding fx-padding-top-24 fx-container fx-center">
   <div class="fx-content">
     <div>
-        <h1 class="fx-jumbo ">Hola! I'm Felix.</h1>
-      <h3 class="fx-padding-16">I am a technical expert specializing in the development and maintenance of HTML emails, websites, and various online services. Proficient in Adobe Creative Cloud applications, including Photoshop, I bring a graphic design background to my work. Additionally, I am skilled in HTML, CSS, and various CMS platforms, including WordPress.
+        <h1 class="fx-font-64 fx-bold">Hola! I'm Felix.</h1>
+      <h3 class="fx-padding-bottom-48">I am a technical expert specializing in the development of <strong>HTML emails</strong>, and various CMS platforms, including <strong>WordPress</strong>. Proficient in Adobe Creative Cloud applications, including Photoshop, I bring a graphic design background to my work.
 
       </h3>
     </div>
@@ -46,20 +47,24 @@
 </div>
 
 
+<hr>
 
 
 <!-- Example of Work -->
 <div class="fx-row-padding fx-padding-16 fx-padding-top-60 fx-container fx-center  fx-padding-lr-100">
     <div class="fx-content">
       <div style="padding: 60px 0px 0px 0px;">
-        <h1><strong>Check out some examples of my work</strong></h1>
+        <h1><strong>Check Out My Work</strong></h1>
+        <h3 class="fx-padding-bottom-24">Fully responsive HTML emails that look great in over 100+ Email Service Providers.
+
+        </h3>
 
       </div>
     </div>
   </div>
 
   <!-- START: First Row of My Work -->
-  <div class="fx-row-padding fx-padding-lr-200 fx-margin-top-20 fx-padding-bottom-64"> 
+  <div class="fx-row-padding fx-padding-lr-200 fx-padding-bottom-100"> 
 
     <div class="fx-quarter fx-margin-top-30">
     <div class="">
