--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  
   <link rel="shortcut icon" type="image/jpg" href="https://felixzavala.com/assets/img/fboxlogowhite.png"/>
   <style>
     body, h1, h2, h3, h4, h5, h6 {font-family: "Lato", sans-serif}
@@ -54,7 +55,13 @@
 <div class="fx-row-padding fx-padding-16 fx-padding-top-60 fx-container fx-center  fx-padding-lr-100">
     <div class="fx-content">
       <div style="padding: 60px 0px 0px 0px;">
-        <h1><strong>Check Out My Work</strong></h1>
+        <h1><strong>PORTFOLIO</strong></h1>
+              <!-- Icon Divider-->
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fa fa-envelope"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
         <h3 class="fx-padding-bottom-24">Fully responsive HTML emails that look great in over 100+ Email Service Providers.
 
         </h3>
