--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     </div>
     </div>
     
+    
     <div class="fx-quarter fx-margin-top-30">
     <div class="">
         <a style="text-decoration: none !important" href="http://felixzavala.com/healthtea.html" target="_blank"> <img src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/HealthTeaEmailPreview.jpg" alt="Group of children signing to the camera." style="width:100%" class="fx-hover-opacity ">
@@ -120,8 +121,8 @@
 <!-- Footer -->
 <footer class="fx-container fx-padding-32 fx-center fx-mainblue " >  
   <div class="fx-xxlarge fx-padding-top-80" style="padding: 0px 100px;">
-    <a href="https://www.youtube.com/@felix_codes"> <i class="fa fa-youtube-play fx-hover-opacity"></i></a>&nbsp;
-    <a href="https://www.linkedin.com/in/felix-zavala-8a8266231/"><i class="fa fa-linkedin fx-hover-opacity"></i></a>&nbsp;
+    <a href="https://www.youtube.com/@felix_codes"> <i class="fa fa-youtube-play fx-hover-opacity"></i></a>&nbsp;&nbsp;&nbsp;
+    <a href="https://www.linkedin.com/in/felix-zavala-8a8266231/"><i class="fa fa-linkedin fx-hover-opacity"></i></a>&nbsp;&nbsp;&nbsp;
     <a href="mailto:jfelixzavala10@gmail.com"><i class="fa fa-envelope fx-hover-opacity"></i></a>
  </div>
  <p>FelixZavala.com <br> &copy; 2019-2024</p>
