--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="fx-quarter fx-margin-top-20">
     <div class="">
-        <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemp2.html" target="_blank"> <img src="https://raw.githubusercontent.com/JFELIXZAVALA/Felixzavala/gh-pages/img/GameStoreEmailPreview.jpg" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
+        <a style="text-decoration: none !important" href="https://felixzavala.com/emailtemp2.html" target="_blank"> <img src="http://felixzavala.com/img/GameStoreEmailPreview1.png" alt="Young man using a gaming PC." style="width:100%" class="fx-hover-opacity">
             <div class="fx-container fx-center fx-padding-top-24">Mobile Responsive Email
      </a>
       </div>
